--- a/TpAnto/TpAnto.vcxproj.filters
+++ b/TpAnto/TpAnto.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="TPMain.cpp">
+    <ClCompile Include="TpAnto.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="TP1.cpp">
